--- a/_htmlstory.html
+++ b/_htmlstory.html
@@ -6,21 +6,27 @@
  #
  #}
 {% block content %}
+
+	<div id='map' class='map'></div>
+
 {% endblock content %}
 
 {% block library_scripts %}
 {# Uncomment this if you are using libraries such as jQuery #}
-{# <script src="//{{ ROOT_URL }}/js/vendor.min.js"></script> #}
+<script src="//{{ ROOT_URL }}/js/vendor.min.js"></script>
 {% endblock %}
 
 {% block scripts %}
 {# Uncomment this if you are using custom JavaScript #}
-{# <script src="//{{ ROOT_URL }}/js/app.min.js"></script> #}
+<script src="//{{ ROOT_URL }}/js/app.min.js"></script>
 <script>
 (function(document) {
   var CSS = [
     "//{{ ROOT_URL }}/css/styles.css"
   ];
+
+	window.ROOT_URL = "{{ ROOT_URL }}";
+
   CSS.forEach(function(url) {
     var link = document.createElement('link');
     link.setAttribute('rel', 'stylesheet');
