Make a two-column layout, with two maps.

--- a/_htmlstory.html
+++ b/_htmlstory.html
@@ -6,8 +6,11 @@
  #
  #}
 {% block content %}
-
-	<div id='map' class='map'></div>
+  <div class='maps'>
+    <div id='map' class='map'></div>
+    <div id='map2' class='map'></div>  
+  </div>
+	
 
 {% endblock content %}
 
