three blurbs, three templates

--- a/_commuters.html
+++ b/_commuters.html
@@ -10,9 +10,14 @@
 
 {% block content %}
 <div class='maps'>
-  {{ make_map('nonwhite') }}
+  {{ make_map('pop_nonwhite') }}
   {{ make_map('tix_biking') }}
 </div>	
+
+<div class='maps'>
+  {{ make_map('pop_nonwhite') }}
+  {{ make_map('tix_parkin') }}
+</div>  
 
 {% endblock content %}
 
