Add alt JS for commuters, since it has diff geography

--- a/_commuters.html
+++ b/_commuters.html
@@ -22,7 +22,7 @@
 
 {% block scripts %}
 {# Uncomment this if you are using custom JavaScript #}
-<script src="//{{ ROOT_URL }}/js/app.min.js"></script>
+<script src="//{{ ROOT_URL }}/js/commuter.min.js"></script>
 <script>
 (function(document) {
   var CSS = [
