--- a/_commuters.html
+++ b/_commuters.html
@@ -1,6 +1,6 @@
 {% macro make_map(key) %}
   {% set map = maps[key] %}
-  <div id='{{ key }}' class='map' data-value='{{ key }}'>
+  <div id='{{ key }}' class='map' data-value='{{ key }}' data-format='{{ map.number_format }}'>
       <h2 class='map__headline'>{{ map.headline|process_text }}</h2>
       <p class='map__subheadline'>{{ map.subheadline|process_text }}</p>
       <div class='map__container'></div>
