--- a/_cycling-citations.html
+++ b/_cycling-citations.html
@@ -1,17 +1,19 @@
 {% macro make_map(key) %}
   {% set map = maps[key] %}
-  <div id='{{ key }}' class='map' data-value='{{ key }}'>
+  <div id='{{ key }}' class='map' data-value='{{ key }}' data-format='{{ map.number_format }}'>
       <h2 class='map__headline'>{{ map.headline|process_text }}</h2>
       <p class='map__subheadline'>{{ map.subheadline|process_text }}</p>
       <div class='map__container'></div>
       <p class='map__source'>{{ map.sources|process_text }}</p>
   </div>
 {% endmacro %}
+
+
 {% block content %}
 <div class='maps'>
-{#   {{ make_map('tix_biking', maps) }}
-  {{ make_map('pop_nonwhite', maps) }}
- #}</div>	
+  {{ make_map('tix_biking') }}
+  {{ make_map('pop_nonwhite') }}
+</div>	
 
 {% endblock content %}
 
